# gossip-protocol

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/: design.md
results/hybrid_n10_f3_t8_s42/: node_9000.jsonl  node_9001.jsonl  node_9002.jsonl  node_9003.jsonl  node_9004.jsonl  node_9005.jsonl  node_9006.jsonl  node_9007.jsonl  node_9008.jsonl  node_9009.jsonl
results/hybrid_n10_f3_t8_s43/: node_9000.jsonl  node_9001.jsonl  node_9002.jsonl  node_9003.jsonl  node_9004.jsonl  node_9005.jsonl  node_9006.jsonl  node_9007.jsonl  node_9008.jsonl  node_9009.jsonl
results/hybrid_n10_f3_t8_s44/: node_9000.jsonl  node_9001.jsonl  node_9002.jsonl  node_9003.jsonl  node_9004.jsonl  node_9005.jsonl  node_9006.jsonl  node_9007.jsonl  node_9008.jsonl  node_9009.jsonl
results/hybrid_n10_f3_t8_s45/: node_9000.jsonl  node_9001.jsonl  node_9002.jsonl  node_9003.jsonl  node_9004.jsonl  node_9005.jsonl  node_9006.jsonl  node_9007.jsonl  node_9008.jsonl  node_9009.jsonl
results/hybrid_n10_f3_t8_s46/: node_9000.jsonl  node_9001.jsonl  node_9002.jsonl  node_9003.jsonl  node_9004.jsonl  node_9005.jsonl  node_9006.jsonl  node_9007.jsonl  node_9008.jsonl  node_9009.jsonl
results/hybrid_n20_f3_t8_s42/: node_9000.jsonl  node_9001.jsonl  node_9002.jsonl  node_9003.jsonl  node_9004.jsonl  node_9005.jsonl  node_9006.jsonl  node_9007.jsonl  node_9008.jsonl  node_9009.jsonl  node_9010.jsonl  node_9011.jsonl  node_9012.jsonl  node_9013.jsonl  node_9014.jsonl  node_9015.jsonl  (+4 more)
scripts/: analyze.py  simulate.py  topology.py
tests/: test_gossip_engine.py  test_pow.py  test_protocol.py
(+1239 files in other folders)
